# Jade-League-Bin-Editor

./: .gitignore  App.xaml  App.xaml.cs  Jade.sln  LICENSE.md  README.md  index.html  package-lock.json  package.json
Editor/: BracketColorizer.cs  StickyScrollControl.cs
Reference-Code/src/commands/: export.rs  hash.rs  mesh.rs  wad.rs
Ritobin/: HashManager.cs  VfxParser.cs
Services/: HashDownloader.cs  IconService.cs  ThemeHelper.cs  ThemeManager.cs  ThemeSyntaxHighlighting.cs
Themes/: AMOLEDTheme.xaml  Blue Cold.xaml  DarkBlueTheme.xaml  DarkRedTheme.xaml  DefaultTheme.xaml  ForestGreenTheme.xaml  LightPinkTheme.xaml  OrangeBurnoutTheme.xaml  PastelBlueTheme.xaml  PurpleGriefTheme.xaml  VioletSorrowTheme.xaml  VoidTheme.xaml
Windows/: AboutWindow.xaml  AboutWindow.xaml.cs  CompareDialog.xaml  CompareDialog.xaml.cs  FindDialog.xaml  FindDialog.xaml.cs  IconPanelDialog.xaml  IconPanelDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MaterialOverrideEntryDialog.xaml  MaterialOverrideEntryDialog.xaml.cs  ParticlePanelDialog.xaml  ParticlePanelDialog.xaml.cs  PreferencesWindow.xaml  PreferencesWindow.xaml.cs  ReplaceDialog.xaml  ReplaceDialog.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  ThemesWindow.xaml  ThemesWindow.xaml.cs
src/: App.css  App.modernui.css  App.tsx
src-tauri/: Cargo.toml  build.rs  jade-rust.VisualElementsManifest.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsi
src-tauri/src/: app_commands.rs  bin_commands.rs  extra_commands.rs  hash_commands.rs  lib.rs  library_commands.rs  mesh_commands.rs  taskbar_progress.rs  wad_commands.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/hash/: mod.rs
src-tauri/src/core/mesh/: anm.rs  error.rs  mod.rs  scb.rs  sco.rs  skin_animations.rs  skin_bin.rs  skin_textures.rs  skl.rs  skn.rs  texture_decode.rs
src-tauri/src/core/mesh/anm_compressed/: evaluate.rs  evaluator.rs  frame.rs  header.rs  mod.rs
src-tauri/src/core/wad/: extracted_overlay.rs  extractor.rs  format.rs  hash_downloader.rs  hash_extractor.rs  hash_scanner.rs  lmdb_hashes.rs  mod.rs  mount.rs  reader.rs  sniff.rs
src-tauri/src/ritobin/: bin_writer.rs  hashes.rs  json_reader.rs  mod.rs  reader.rs  text_reader.rs  types.rs  writer.rs
src/components/: AboutDialog.css  AboutDialog.tsx  EditShelf.tsx  ExtractionSettingsDialog.tsx  FileLoadingToast.css  FileLoadingToast.tsx  FormatIcons.tsx  GeneralEditPanel.css  GeneralEditPanel.tsx  HashSyncToast.css  HashSyncToast.tsx  Icons.tsx  JamesOverlay.css  JamesOverlay.tsx  MarkdownPreview.css  MaterialLibraryBrowser.css  MaterialLibraryBrowser.tsx  MaterialOverrideDialog.css  MaterialOverrideDialog.tsx  MenuBar.css  MenuBar.tsx  MeshPreview.tsx  ParticleEditorDialog.css  ParticleEditorDialog.tsx  ParticleEditorPanel.css  ParticleEditorPanel.tsx  PreferencesDialog.css  PreferencesDialog.tsx  QuartzDiffTab.css  QuartzDiffTab.tsx  SettingsDialog.css  SettingsDialog.tsx  SmokeOverlay.tsx  StatusBar.css  TabBar.css  TabBar.tsx  TexHoverPopup.tsx  ThemesDialog.css  ThemesDialog.tsx  TitleBar.css  (+3 more)
src/lib/: binOperations.ts  colorProvider.ts  ritobinLanguage.ts  syntaxChecker.ts  texFormat.ts  themeApplicator.ts  themes.ts
src/lib/babylon/: animationPlayer.ts  engine.ts  meshBuilder.ts  skeletonBuilder.ts
src/shells/: Dock.css  DockGuides.tsx  EditorPane.tsx  FloatingEditorPane.tsx  MaterialOverrideDockPanel.css  MaterialOverrideDockPanel.tsx  MaterialOverridePanel.tsx  RibbonBar.tsx  SecondaryPaneView.tsx  SharedDialogs.tsx  ShellContext.tsx  VSCodeShell.tsx  VSDockGroup.tsx  VSDockPane.tsx  VSTitleBar.tsx  VSToolbar.tsx  VisualStudioShell.css  VisualStudioShell.tsx  WordShell.css  WordShell.tsx  useToolLayout.ts
