[package]
name = "jade-rust"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "jade_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libloading = "0.8"
opener = "0.7"
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
byteorder = "1.5"
once_cell = "1.19"
parking_lot = "0.12"
