[package]
name = "jade-rust"
version = "0.9.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "jade_rust_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "2"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
libloading = "0.8"
opener = "0.7"
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream"] }
byteorder = "1.5"
parking_lot = "0.12"

# Parallel processing for hash loading
rayon = "1.10"
futures = "0.3"
chrono = { version = "0.4", features = ["clock"] }

# Error handling
thiserror = "2"
indexmap = "2.13.0"

# Windows registry for file association
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_Storage_FileSystem", "Wdk_System_SystemInformation"] }

# League Toolkit for BIN file parsing (crates.io for compatible ltk_primitives version)
ltk_meta = { version = "0.3.3", features = ["serde"] }
ltk_ritobin = "0.1.4"

# WAD extraction — LMDB-backed hashtable + zstd for the combined.zst download.
heed = "0.20"
zstd = "0.13"
flate2 = "1.0"
# Memory-mapped WAD reads — workers slice into a shared `&[u8]` instead
# of opening the file once per chunk.
memmap2 = "0.9"
# xxh64 for path → hash matching during the WAD-hash scanner. Same crate
# Quartz uses; their `hashes.extracted.txt` interop relies on it being
# byte-identical.
twox-hash = "1.6"
