[package]
name = "jade-rust"
version = "0.9.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "jade_rust_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# v3 to match the version `tauri-winres → tauri-build` already pulls
# in transitively, so we don't compile two copies of embed-resource +
# its `vswhom` build helper.
embed-resource = "3"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
libloading = "0.8"
opener = "0.7"
# Slimmed image features — we only decode PNG/JPG/BMP from disk; DDS/TEX
# are decoded in JS via lib/texFormat.ts. Defaults pull AVIF/EXR/HDR/WEBP
# decoders + their massive dep chains (ravif, dav1d, zune-*) we never use.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
base64 = "0.22"
# Slimmed reqwest features — only used for one HTTPS GET to GitHub.
# `default-features = false` drops openssl (we use rustls), encoding_rs
# (no charset negotiation needed), HTTP/2 (GitHub serves over h1 fine),
# and macOS system-config helpers. Still keep json + stream.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
byteorder = "1.5"
parking_lot = "0.12"

# Parallel processing for hash loading
rayon = "1.10"
futures = "0.3"
# Slimmed chrono — we only call `Utc::now().to_rfc3339()`. Default
# features pull serde + js-sys + wasmbind. `clock` keeps the
# now()/local timestamp helpers; `std` keeps the Display impls.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Error handling
thiserror = "2"
indexmap = "2.13.0"

# Windows registry for file association
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_Storage_FileSystem", "Wdk_System_SystemInformation"] }

# League Toolkit for BIN file parsing (crates.io for compatible ltk_primitives version)
ltk_meta = { version = "0.3.3", features = ["serde"] }
ltk_ritobin = "0.1.4"

# WAD extraction — LMDB-backed hashtable + zstd for the combined.zst download.
heed = "0.20"
zstd = "0.13"
flate2 = "1.0"
# Memory-mapped WAD reads — workers slice into a shared `&[u8]` instead
# of opening the file once per chunk.
memmap2 = "0.9"
# xxh64 for path → hash matching during the WAD-hash scanner. Same crate
# Quartz uses; their `hashes.extracted.txt` interop relies on it being
# byte-identical.
twox-hash = "1.6"

# Vector/matrix math for SKN/SKL/ANM parsing + bind-pose composition.
# Default features only — we don't need serde/scalar-math/wasmbind.
glam = "0.29"

# BC1/BC3 (DXT1/DXT5) block decompression for the 3D-preview texture
# pipeline. Pure-Rust, no transitive deps, ~10KB. Pairs with our own
# DDS / Riot-TEX header parser (the texpresso crate is just the block
# math). Decoder output is rayon-parallelised across multiple
# textures by the wad_decode_textures command.
texpresso = "2"
